# CSLP-Projeto

./: .gitignore  Doxyfile  PPMImage.cpp  Player.hpp  README.md
BitStream/: CMakeLists.txt
BitStream/include/: BitStream.h
BitStream/src/: BitStream.cpp  main.cpp
GolombCoding/: CMakeLists.txt
GolombCoding/include/: Golomb.h
GolombCoding/src/: Golomb.cpp  main.cpp
documentation/html/: BitStream_2CMakeFiles_23_827_87_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  BitStream_2CMakeFiles_23_827_87_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  BitStream_2CMakeFiles_23_827_87_2CompilerIdC_2CMakeCCompilerId_8c.html  BitStream_2CMakeFiles_23_827_87_2CompilerIdC_2CMakeCCompilerId_8c_source.html  BitStream_2CMakeFiles_2Main_8dir_2src_2BitStream_8cpp_8o_8d.html  BitStream_2CMakeFiles_2Main_8dir_2src_2BitStream_8cpp_8o_8d_source.html  BitStream_8cpp.html  (+629 more)
graph_generation/: lossy.py
imageManipulation/: CMakeLists.txt  PPMImage.cpp  PPMImage.hpp
projeto_final/: CMakeLists.txt
projeto_final/documentation/html/: ArgParser_8cpp.html  ArgParser_8cpp__incl.map  ArgParser_8cpp__incl.md5  ArgParser_8cpp_source.html  ArgParser_8h.html  ArgParser_8h__dep__incl.map  ArgParser_8h__dep__incl.md5  ArgParser_8h__incl.map  ArgParser_8h__incl.md5  ArgParser_8h_source.html  BitStream_8cpp.html  BitStream_8cpp__incl.map  BitStream_8cpp__incl.md5  BitStream_8cpp_source.html  BitStream_8h.html  BitStream_8h__dep__incl.map  BitStream_8h__dep__incl.md5  BitStream_8h__incl.map  BitStream_8h__incl.md5  BitStream_8h_source.html  CMakeLists_8txt.html  Golomb_8cpp.html  Golomb_8cpp__incl.map  Golomb_8cpp__incl.md5  Golomb_8cpp_source.html  Golomb_8h.html  Golomb_8h__dep__incl.map  Golomb_8h__dep__incl.md5  Golomb_8h__incl.map  Golomb_8h__incl.md5  Golomb_8h_source.html  annotated.html  classArgParser-members.html  classArgParser.html  classArgParser_a22918d0bded9b199134e941ad2d54d74_icgraph.map  classArgParser_a22918d0bded9b199134e941ad2d54d74_icgraph.md5  classArgParser_a4f3b70f966578f77d1afc44bd685baac_icgraph.map  classArgParser_a4f3b70f966578f77d1afc44bd685baac_icgraph.md5  classArgParser_af7643bf5f97e278eb8dfa4e92a3bb869_icgraph.map  classArgParser_af7643bf5f97e278eb8dfa4e92a3bb869_icgraph.md5  (+103 more)
projeto_final/documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+27 more)
projeto_final/documentation/latex/: ArgParser_8cpp.tex  ArgParser_8cpp__incl.md5  ArgParser_8h.tex  ArgParser_8h__dep__incl.md5  ArgParser_8h__incl.md5  BitStream_8cpp.tex  BitStream_8cpp__incl.md5  BitStream_8h.tex  BitStream_8h__dep__incl.md5  BitStream_8h__incl.md5  Golomb_8cpp.tex  Golomb_8cpp__incl.md5  Golomb_8h.tex  Golomb_8h__dep__incl.md5  Golomb_8h__incl.md5  annotated.tex  classArgParser.tex  classArgParser_a22918d0bded9b199134e941ad2d54d74_icgraph.md5  classArgParser_a4f3b70f966578f77d1afc44bd685baac_icgraph.md5  classArgParser_af7643bf5f97e278eb8dfa4e92a3bb869_icgraph.md5  classBitStream.tex  classBitStream_a0a81dbad86d46fde7ee9b943031fc411_icgraph.md5  classBitStream_a17a01273ccc12e3c0a1045a010736a8e_icgraph.md5  classBitStream_a4bebf59fe9379dbdefb4647fdd2ddf01_icgraph.md5  classBlock.tex  classGolomb.tex  classGolomb__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hibridEncoder_8cpp.tex  hibridEncoder_8cpp__incl.md5  hibridEncoder_8cpp_a17dc6785b150af90af3063c048173c4b_cgraph.md5  hibridEncoder_8cpp_a28c13f1704b28e49c136d584d5ba0631_icgraph.md5  hibridEncoder_8cpp_a87aa94cf8cbdc25d7ee4ab7146975323_cgraph.md5  hibridEncoder_8cpp_a87aa94cf8cbdc25d7ee4ab7146975323_icgraph.md5  hibridEncoder_8cpp_acffad99f8ab893c8a21d4a711eba1ec4_cgraph.md5  hibridEncoder_8cpp_acffad99f8ab893c8a21d4a711eba1ec4_icgraph.md5  hibridEncoder_8cpp_ad83114a6d533550c807ba8593f8f1536_cgraph.md5  hibridEncoder_8cpp_af1ca12016690a141669988c81edb8099_icgraph.md5  (+27 more)
projeto_final/include/: ArgParser.h  Golomb.h  hibridEncoder.h  intraEncoder.h
projeto_final/src/: ArgParser.cpp  Golomb.cpp  hibridEncoder.cpp  intraEncoder.cpp  main.cpp
src/GolombCoding/: BitStream.cpp  CMakeLists.txt  Golomb.cpp  Golomb.h  main.cpp
src/GolombCoding/include/: Golomb.h
src/encoder/: CMakeLists.txt  encoder.cpp
src/encoder/include/: BitStream.h
src/intraEncoder/: BitStream.cpp  CMakeLists.txt  intraEncoder.cpp  main.cpp  predictors.cpp
src/intraEncoder/include/: BitStream.h  Golomb.h  intraEncoder.h
src/videoPlayer/: CMakeLists.txt  Player.cpp  Player.hpp  README.md  player.cpp  player.hpp
videoPlayer/: CMakeLists.txt  README.md  player.cpp  videoPlayer
(+517 files in other folders)
