cmake_minimum_required(VERSION 3.16)
project( videoPlayer )
find_package( OpenCV REQUIRED )
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( videoPlayer player.cpp )
target_compile_options(${PROJECT_NAME} PRIVATE -g)
target_link_libraries( videoPlayer ${OpenCV_LIBS} )