cmake_minimum_required(VERSION 3.16)
project( player )
find_package ( OpenCV REQUIRED PATHS ~/build NO_DEFAULT_PATH)
find_package( OpenCV REQUIRED )
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( player Player.cpp )
target_compile_options(${PROJECT_NAME} PRIVATE -g)
target_link_libraries( player ${OpenCV_LIBS} )